tests/e2e/tests/pilot/testdata/authn/v1alpha1/multiplexing/authn-policy-permissive.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "c-permissive-authn-80"
spec:
  targets:
  - name: "c"
    ports:
    - number: 80
  peers:
    - mtls:
        mode: PERMISSIVE
---
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "c-strict-authn-8080"
spec:
  targets:
  - name: "c"
    ports:
    - number: 8080
  peers:
    - mtls:
        mode: STRICT
