tests/e2e/tests/pilot/testdata/authn/v1alpha1/multiplexing/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c-dr-mtls
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
